[Mac] Fix camel case in variable names.

In a previous modification of bubble_decoration.mm I mistakenly used
camel case instead of hacker case in several places. This cl corrects
those mistakes.

R=tapted@chromium.org
BUG=622779

Review-Url: https://codereview.chromium.org/2206073002
Cr-Commit-Position: refs/heads/master@{#409550}

Former-commit-id: b680e7233de12405f5e1a3f3ab0147d5715a06fc